--- a/package.json
+++ b/package.json
@@ -6,6 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
+  },
   "author": "\"Fabio Junior da Silva\"",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "husky": "^3.0.5"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2"
+  }
 }
