--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,11 @@
   "parserOptions": {
     "ecmaVersion": 2018
   },
+  "plugins": ["chai-friendly"],
   "rules": {
-    "no-console": "off"
+    "no-console": "off",
+    "no-unused-expressions": 0,
+    "chai-friendly/no-unused-expressions": 2,
+    "object-curly-newline": "off"
   }
 }
