--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/register": "^7.6.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.18.2"
   }
 }
