Instalação e configuração do sinon

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
   },
   "extends": ["airbnb-base"],
   "globals": {
-    "mocha": "readonly",
+    "fetch": true,
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
   },
