--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-chai-friendly": "^0.4.1",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "node-fetch": "^2.6.0",
+    "sinon": "^7.4.2",
+    "sinon-chai": "^3.3.0",
+    "sinon-stub-promise": "^4.0.0"
   }
 }
