--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "eslint-plugin-import": "^2.18.2",
     "node-fetch": "^2.6.0",
     "sinon": "^7.4.2",
-    "sinon-chai": "^3.3.0",
-    "sinon-stub-promise": "^4.0.0"
+    "sinon-chai": "^3.3.0"
   }
 }
